# py-json-diff

./: CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
src/philiprehberger_json_diff/: __init__.py
tests/: test_json_diff.py
