[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-json-diff"
version = "0.1.2"
description = "Readable JSON comparison with colorized terminal output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["json", "diff", "compare", "colorized", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-json-diff#readme"
Repository = "https://github.com/philiprehberger/py-json-diff"
Issues = "https://github.com/philiprehberger/py-json-diff/issues"
Changelog = "https://github.com/philiprehberger/py-json-diff/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_json_diff"]
